# task-management-agent

./: .gitignore  README.md  instructions.md  pyproject.toml  tools.py
TaskManager/: agent.py  get_calendar_client.py
TaskManager/tests/: add_task.py
agent/: agent.py  instructions.md  tools.py
